<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SinginActivity"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:id="@+id/layoutHeader"
            android:background="@color/purple_500"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/welcome_to"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/colorTextIcons"
                android:includeFontPadding="false"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_italic"
                android:text="@string/video_meeting_conference_app"
                android:textColor="@color/colorTextIcons"
                android:includeFontPadding="false"
                android:layout_marginTop="@dimen/_4sdp"
                android:textSize="@dimen/_16ssp"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textSignInLabel"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/sign_in_to_your_account"
            android:fontFamily="@font/ubuntu_italic"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/colorPrimaryText"
            android:includeFontPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutHeader"

            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardSignIn"
            app:cardCornerRadius="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@id/textSignInLabel"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:cardBackgroundColor="@android:color/transparent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/colorPrimaryText"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:id="@+id/inputSignInEmail"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:hint="@string/moon_example_com"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorMintText"
                    android:textSize="@dimen/_13ssp"
                    android:includeFontPadding="false"
                    android:importantForAutofill="no"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/colorPrimaryText"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:id="@+id/inputSignInPassword"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/hint_password"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorMintText"
                    android:textSize="@dimen/_13ssp"
                    android:includeFontPadding="false"
                    android:importantForAutofill="no"

                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:id="@+id/signInButton"
            android:text="@string/sign_in"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/ubuntu_bold"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/cardSignIn"
            android:includeFontPadding="false"
            app:cornerRadius="@dimen/_8sdp"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textNotAccount"
            android:text="@string/don_t_have_an_account"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_13ssp"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@id/signInButton"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUp"
            android:text="@string/sign_up"
            android:gravity="center"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/purple_700"
            android:fontFamily="@font/ubuntu_bold"
            app:layout_constraintTop_toBottomOf="@id/textNotAccount"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/_6sdp"
            android:includeFontPadding="false"
            android:textAllCaps="true"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>