<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SingUpActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:id="@+id/layoutHeader"
        android:gravity="center_vertical"
        android:background="@color/purple_500"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:id="@+id/imageBack"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:tint="@color/colorTextIcons"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_Up"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_15ssp"
            android:layout_marginStart="@dimen/_8sdp"
            android:includeFontPadding="false"
            android:fontFamily="@font/ubuntu_bold"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:text="@string/we_need_a_few_details"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_15ssp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardBackgroundColor="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name"
                        android:textSize="@dimen/_13ssp"
                        android:textColor="@color/colorPrimaryText"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:id="@+id/inputFirstName"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:hint="@string/mohamed"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorMintText"
                        android:textSize="@dimen/_13ssp"
                        android:includeFontPadding="false"
                        android:importantForAutofill="no"

                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name"
                        android:textSize="@dimen/_13ssp"
                        android:textColor="@color/colorPrimaryText"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:id="@+id/inputLastName"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:hint="@string/ahmed"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorMintText"
                        android:textSize="@dimen/_13ssp"
                        android:includeFontPadding="false"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="@dimen/_13ssp"
                        android:textColor="@color/colorPrimaryText"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:id="@+id/inputEmail"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:hint="@string/moon_example_com"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorMintText"
                        android:textSize="@dimen/_13ssp"
                        android:includeFontPadding="false"
                        android:importantForAutofill="no"

                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textSize="@dimen/_13ssp"
                        android:textColor="@color/colorPrimaryText"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:id="@+id/inputPassword"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:hint="@string/hint_password"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorMintText"
                        android:textSize="@dimen/_13ssp"
                        android:includeFontPadding="false"
                        android:importantForAutofill="no"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_password"
                        android:textSize="@dimen/_13ssp"
                        android:textColor="@color/colorPrimaryText"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:id="@+id/inputConfirmPassword"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:hint="@string/hint_password"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorMintText"
                        android:textSize="@dimen/_13ssp"
                        android:includeFontPadding="false"
                        android:importantForAutofill="no"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:id="@+id/signUpButton"
                    android:text="@string/sign_Up"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@id/cardSignIn"
                    android:includeFontPadding="false"
                    app:cornerRadius="8dp"
                    />

                <ProgressBar
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:id="@+id/singUpProgressBar"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_13ssp"
                android:includeFontPadding="false"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signIn"
                android:text="@string/sign_in"
                android:gravity="center"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/purple_700"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_marginBottom="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="@dimen/_6sdp"
                android:includeFontPadding="false"
                android:textAllCaps="true"
                />

            
        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>