<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDeleteContainer"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">



    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textSingIn"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toTopOf="@id/textDeleteMessage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textDeleteMessage"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_italic"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        tools:ignore="RtlSymmetry"
        android:gravity="center_vertical"
        android:text="@string/do_you_want_sign_out"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@id/textSingIn"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textyes"
        android:fontFamily="@font/ubuntu_medium"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/yes"
        android:textAllCaps="true"
        android:textColor="#FA0202"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDeleteMessage"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textCancel"
        android:fontFamily="@font/ubuntu_medium"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textyes"
        app:layout_constraintTop_toBottomOf="@id/textDeleteMessage"
        />

</androidx.constraintlayout.widget.ConstraintLayout>